# icfp2020

./: Cargo.toml  Makefile  README.md  action.yml  api  build.sh  repos.json  run.sh  run_ai.sh  states.txt  tests.sh
.github/workflows/: main.yml
app/: aplang.rs  bits2d.rs  draw.rs  encodings.rs  gui.rs  interpreter.rs  lexer.rs  main.rs  nom_helpers.rs  protocol.rs  sim.rs  submission.rs  value_tree.rs
imgs/: .gitignore
states/: demo1.state  demo2.state  demo3.state  demo4.state  demo5.state  demo6.state  rooms.txt
