[package]
name = "theblindhen2020"
version = "0.1.0"
authors = ["Johan Rosenkilde <jsrn@jsrn.dk>"]
edition = "2018"

[[bin]]
name = "app"
path = "app/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
ureq = { version = "*", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "2.33.1", default-features = false }
structopt = { version = "0.3.15", default-features = false }
log = { version = "0.4.0", default-features = false }
env_logger = { version = "0.7.1", default-features = false }
nom = "5.1"
fixedbitset = "0.3"