[package]
name = "theblindhen2020"
version = "0.1.0"
authors = ["Johan Rosenkilde <jsrn@jsrn.dk>", "Jonas Jensen <jbj@knef.dk>", "Kasper Svendsen <kaspersv@gmail.com>"]
edition = "2018"

[features]
default = ["gui"]
gui = ["fltk"]

[[bin]]
name = "app"
path = "app/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1.3", default-features = false, features = [ "tls" ] }
structopt = { version = "0.3.15", default-features = false }
log = { version = "0.4.0", default-features = false }
env_logger = { version = "0.7.1", default-features = false }
nom = "5.1"
fixedbitset = "0.3"
png = "0.16"
num-bigint = "0.3"
num-traits = "0.2.12"
fltk = { version = "0.7", optional = true }
vector2d = "2.2"
rand = "0.7.3"
rand_core = "0.5.1"